<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WithoutOverScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/summary_logo_size"
            android:layout_height="@dimen/summary_logo_size"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/company_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            tools:text="KJjasdhjkh KJHkjashdjh JHkjhasfjkh JKHafjksdhjkashjkfh jkhasfjkh asjklhfljkhaskjhf jklahs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/phone_number_and_weburl_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="phone_title,weburl_title,phone_value,weburl_value" />

        <TextView
            android:id="@+id/phone_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <TextView
            android:id="@+id/phone_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_title"
            tools:text="3726472dfsdfsdfsdfsdfsdfsfskldjfkljasasdl;kaskdl;askdl;aksl;dka;lskdl;adlkfjdlkjsadlkfjlaksdjfdfsdfsdfsdfs123" />

        <TextView
            android:id="@+id/weburl_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <TextView
            android:id="@+id/weburl_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/weburl_title"
            tools:text="apple.com" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/country_and_currency_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="country_title,currency_value,currency_title,country_value" />

        <TextView
            android:id="@+id/country_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/country"
            app:layout_constraintBottom_toTopOf="@id/country_value"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_and_weburl_barrier" />

        <TextView
            android:id="@+id/country_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_title"
            tools:text="US" />

        <TextView
            android:id="@+id/currency_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_and_weburl_barrier" />

        <TextView
            android:id="@+id/currency_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/currency_title"
            tools:text="USD" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/so_and_mc_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="so_title,so_value,mc_title,mc_value" />

        <TextView
            android:id="@+id/so_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/shares_outstanding"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_and_currency_barrier" />

        <TextView
            android:id="@+id/so_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/so_title"
            tools:text="3824763472" />

        <TextView
            android:id="@+id/mc_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/market_capitalization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/country_and_currency_barrier" />

        <TextView
            android:id="@+id/mc_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/mc_title"
            tools:text="435634636" />

        <TextView
            android:id="@+id/exchange_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/exchange"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/so_and_mc_barrier" />

        <TextView
            android:id="@+id/exchange_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@id/horizontal_center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_title"
            tools:text="NASDAQ/NMS" />

        <TextView
            android:id="@+id/ipo_title"
            style="@style/SummaryFieldTitle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/ipo_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/so_and_mc_barrier" />

        <TextView
            android:id="@+id/ipo_value"
            style="@style/SummaryFieldValue"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/horizontal_center"
            app:layout_constraintTop_toBottomOf="@+id/ipo_title"
            tools:text="1980-12-12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>